k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapi-fhir
  labels:
    app: hapi-fhir
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: hapi-fhir
